--- a/infrastructure/corpus-scheduler-lambda/package.json
+++ b/infrastructure/corpus-scheduler-lambda/package.json
@@ -20,12 +20,14 @@
     "@cdktf/provider-local": "10.1.0",
     "@cdktf/provider-null": "10.0.0",
     "@cdktf/provider-pagerduty": "13.11.6",
+    "@cdktf/provider-archive": "10.2.0",
     "cdktf": "0.20.8",
     "cdktf-cli": "0.20.8",
     "constructs": "10.3.0"
   },
   "devDependencies": {
     "eslint-config-custom": "workspace:*",
-    "tsconfig": "workspace:*"
+    "tsconfig": "workspace:*",
+    "@types/node": "22.6.1"
   }
 }
