--- a/infrastructure/corpus-scheduler-lambda/package.json
+++ b/infrastructure/corpus-scheduler-lambda/package.json
@@ -28,6 +28,6 @@
   "devDependencies": {
     "eslint-config-custom": "workspace:*",
     "tsconfig": "workspace:*",
-    "@types/node": "22.6.1"
+    "@types/node": "~20.12"
   }
 }
