--- a/infrastructure/prospect-api/package.json
+++ b/infrastructure/prospect-api/package.json
@@ -29,6 +29,6 @@
   "devDependencies": {
     "eslint-config-custom": "workspace:*",
     "tsconfig": "workspace:*",
-    "@types/node": "22.6.1"
+    "@types/node": "~20.12"
   }
 }
