--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -8,7 +8,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@types/node": "22.6.1",
+    "@types/node": "~20.12",
     "ts-node": "^10.9.2",
     "tslib": "2.7.0",
     "tsup": "8.2.4",
