--- a/lambdas/prospect-translation-lambda/package.json
+++ b/lambdas/prospect-translation-lambda/package.json
@@ -26,6 +26,7 @@
     "@types/aws-lambda": "8.10.134",
     "@types/jest": "29.5.12",
     "eslint-config-custom": "workspace:*",
+    "msw": "2.4.7",
     "jest": "29.7.0",
     "ts-jest": "29.1.2",
     "tsconfig": "workspace:*"
