fix(terraform): updating terraform deployment (#223)
* fix(terraform): updating terraform deployment

* fix(packaging): updating how common packages are bundled

* fix(export): ensuring common packages export

* fix(hoisting): remove hoisting

* fix(collection): including needed packages in all places (now that no hoisting)

* remove prestart scripts

--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -8,9 +8,9 @@
     "access": "public"
   },
   "dependencies": {
-    "@types/node": "^20.12",
+    "@types/node": "~20.12",
     "ts-node": "^10.9.2",
-    "tslib": "2.6.3",
+    "tslib": "2.7.0",
     "tsup": "8.2.4",
     "typescript": "5.3.3"
   },
