--- a/infrastructure/curated-corpus-api/package.json
+++ b/infrastructure/curated-corpus-api/package.json
@@ -15,10 +15,19 @@
     "format": "eslint --fix \"src/**/*.ts\""
   },
   "dependencies": {
-    "@pocket-tools/terraform-modules": "5.8.6"
+    "@pocket-tools/terraform-modules": "5.14.2",
+    "@cdktf/provider-aws": "19.33.0",
+    "@cdktf/provider-local": "10.1.0",
+    "@cdktf/provider-null": "10.0.0",
+    "@cdktf/provider-pagerduty": "13.11.6",
+    "@cdktf/provider-archive": "10.2.0",
+    "cdktf": "0.20.8",
+    "cdktf-cli": "0.20.8",
+    "constructs": "10.3.0"
   },
   "devDependencies": {
     "eslint-config-custom": "workspace:*",
-    "tsconfig": "workspace:*"
+    "tsconfig": "workspace:*",
+    "@types/node": "~20.12"
   }
 }
