--- a/lambdas/prospect-translation-lambda/package.json
+++ b/lambdas/prospect-translation-lambda/package.json
@@ -18,12 +18,15 @@
     "@sentry/serverless": "7.112.2",
     "content-common": "workspace:*",
     "prospectapi-common": "workspace:*",
-    "uuid": "9.0.1"
+    "uuid": "9.0.1",
+    "tslib": "2.7.0",
+    "@snowplow/node-tracker": "3.5.0"
   },
   "devDependencies": {
     "@types/aws-lambda": "8.10.134",
     "@types/jest": "29.5.12",
     "eslint-config-custom": "workspace:*",
+    "msw": "2.4.7",
     "jest": "29.7.0",
     "ts-jest": "29.1.2",
     "tsconfig": "workspace:*"
