--- a/packages/prospectapi-common/package.json
+++ b/packages/prospectapi-common/package.json
@@ -2,14 +2,21 @@
   "name": "prospectapi-common",
   "version": "1.0.0",
   "description": "common code shared between api and lambda",
-  "main": "./dist/index.js",
+  "main": "dist/index.js",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "build": "rm -rf dist && tsc",
+    "build": "tsup src/index.ts --format cjs,esm --dts",
+    "dev": "pnpm run build --watch",
     "test": "jest \"\\.spec\\.ts\"",
     "test-integrations": "jest \"\\.integration\\.ts\" --runInBand",
     "lint": "eslint --fix-dry-run \"**/*.ts\" \"test/**/*.ts\"",
     "format": "eslint --fix \"**/*.ts\" \"test/**/*.ts\""
   },
+  "files": [
+    "dist",
+    "package.json"
+  ],
   "author": "pocket",
   "license": "ISC",
   "private": true,
@@ -17,12 +24,14 @@
     "@apollo/client": "3.9.5",
     "@aws-sdk/client-dynamodb": "3.529.1",
     "@aws-sdk/lib-dynamodb": "3.529.1",
+    "@aws-sdk/util-dynamodb": "3.529.1",
     "content-common": "workspace:*",
     "@sentry/node": "7.112.2",
     "cross-fetch": "3.1.5",
     "fetch-retry": "5.0.6",
     "graphql-tag": "2.12.6",
-    "tldts": "5.7.87"
+    "tldts": "5.7.87",
+    "tslib": "2.7.0"
   },
   "devDependencies": {
     "@faker-js/faker": "8.4.1",
@@ -31,6 +40,7 @@
     "jest": "29.7.0",
     "msw": "2.4.7",
     "ts-jest": "29.1.2",
+    "tsup": "8.2.4",
     "tsconfig": "workspace:*"
   }
 }
