--- a/packages/prospectapi-common/tsconfig.json
+++ b/packages/prospectapi-common/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "extends": "tsconfig/graphql.json",
   "compilerOptions": {
-    "outDir": "./dist",
+    "outDir": "./dist"
   },
   "exclude": ["node_modules", "**/*.spec.ts", "**/*.integration.ts"],
-  "include": ["*.ts"]
+  "include": ["src/**/*.ts"]
 }
