--- a/servers/collection-api/package.json
+++ b/servers/collection-api/package.json
@@ -22,7 +22,6 @@
     "migrate:prisma-deploy": "prisma migrate deploy",
     "migrate:prisma-reset": "prisma migrate reset --skip-seed --force",
     "prebuild": "dotenv -e .env.ci -- prisma generate",
-    "prestart": "prisma generate",
     "pretest": "dotenv -e .env.ci -- prisma generate",
     "pretest-integrations": "dotenv -e .env.ci -- prisma migrate reset --skip-seed --force"
   },
@@ -38,16 +37,22 @@
     "@pocket-tools/tracing": "1.3.15",
     "@pocket-tools/ts-logger": "^1.6.0",
     "@prisma/client": "5.13.0",
-    "@sentry/node": "7.112.2",
+    "prisma": "5.13.0",
     "@sentry/tracing": "7.112.2",
-    "cors": "2.8.5",
     "content-common": "workspace:*",
     "dataloader": "^2.2.2",
-    "express": "4.19.2",
-    "graphql-tag": "2.12.6",
     "graphql-upload": "15.0.2",
     "slugify": "1.6.6",
-    "uuid": "9.0.1"
+    "uuid": "9.0.1",
+    "tslib": "2.7.0",
+    "@apollo/server": "4.11.0",
+    "@apollo/subgraph": "2.9.0",
+    "express": "4.19.2",
+    "cors": "2.8.5",
+    "graphql": "16.9.0",
+    "graphql-tag": "2.12.6",
+    "@sentry/node": "7.112.2",
+    "mime-types": "2.1.35"
   },
   "devDependencies": {
     "tsconfig": "workspace:*",
@@ -56,7 +61,7 @@
     "@types/chai": "4.3.5",
     "@types/jest": "29.5.12",
     "@types/graphql-upload": "8.0.12",
-    "@types/node": "^20.12",
+    "@types/node": "~20.12",
     "@types/sinon": "^10.0.13",
     "@types/supertest": "^2.0.12",
     "chai": "4.3.7",
@@ -65,9 +70,9 @@
     "jest": "29.7.0",
     "nock": "13.5.1",
     "nodemon": "3.0.1",
-    "prisma": "5.13.0",
     "sinon": "^15.0.1",
     "supertest": "6.3.4",
-    "ts-jest": "29.1.2"
+    "ts-jest": "29.1.2",
+    "typescript": "5.3.3"
   }
 }
