--- a/servers/prospect-api/package.json
+++ b/servers/prospect-api/package.json
@@ -25,8 +25,17 @@
     "@pocket-tools/tracing": "1.3.15",
     "@pocket-tools/ts-logger": "^1.6.0",
     "content-common": "workspace:*",
+    "@apollo/server": "4.11.0",
+    "@apollo/subgraph": "2.9.0",
+    "express": "4.19.2",
+    "cors": "2.8.5",
+    "graphql": "16.9.0",
+    "graphql-tag": "2.12.6",
+    "@sentry/node": "7.112.2",
+    "@snowplow/node-tracker": "3.5.0",
     "prospectapi-common": "workspace:*",
-    "supertest": "6.3.4"
+    "tslib": "2.7.0",
+    "lodash": "4.17.21"
   },
   "devDependencies": {
     "@faker-js/faker": "8.4.1",
@@ -35,10 +44,11 @@
     "@types/lodash": "4.14.202",
     "eslint-config-custom": "workspace:*",
     "jest": "29.7.0",
-    "lodash": "4.17.21",
     "nodemon": "3.0.1",
     "ts-jest": "29.1.2",
-    "tsconfig": "workspace:*"
+    "tsconfig": "workspace:*",
+    "typescript": "5.3.3",
+    "supertest": "6.3.4"
   },
   "files": [
     "dist",
