--- a/servers/collection-api/package.json
+++ b/servers/collection-api/package.json
@@ -30,29 +30,29 @@
   },
   "dependencies": {
     "@apollo/server-plugin-response-cache": "4.1.3",
+    "@apollo/server": "4.11.0",
+    "@apollo/subgraph": "2.9.0",
     "@aws-sdk/client-eventbridge": "3.529.1",
     "@aws-sdk/client-s3": "3.529.1",
     "@aws-sdk/lib-storage": "3.529.1",
     "@pocket-tools/apollo-utils": "3.5.0",
     "@pocket-tools/tracing": "1.3.15",
     "@pocket-tools/ts-logger": "^1.6.0",
-    "@prisma/client": "5.13.0",
-    "prisma": "5.13.0",
+    "@prisma/client": "5.20.0",
+    "@sentry/node": "7.112.2",
     "@sentry/tracing": "7.112.2",
     "content-common": "workspace:*",
-    "dataloader": "^2.2.2",
-    "graphql-upload": "15.0.2",
-    "slugify": "1.6.6",
-    "uuid": "9.0.1",
-    "tslib": "2.7.0",
-    "@apollo/server": "4.11.0",
-    "@apollo/subgraph": "2.9.0",
-    "express": "4.19.2",
     "cors": "2.8.5",
-    "graphql": "16.9.0",
+    "dataloader": "^2.2.2",
+    "express": "4.19.2",
     "graphql-tag": "2.12.6",
-    "@sentry/node": "7.112.2",
-    "mime-types": "2.1.35"
+    "graphql-upload": "15.0.2",
+    "graphql": "16.9.0",
+    "mime-types": "2.1.35",
+    "prisma": "5.20.0",
+    "slugify": "1.6.6",
+    "tslib": "2.7.0",
+    "uuid": "9.0.1"
   },
   "devDependencies": {
     "@faker-js/faker": "8.4.1",
