--- a/infrastructure/collection-api/package.json
+++ b/infrastructure/collection-api/package.json
@@ -26,8 +26,9 @@
     "constructs": "10.3.0"
   },
   "devDependencies": {
+    "@types/node": "~20.12",
     "eslint-config-custom": "workspace:*",
     "tsconfig": "workspace:*",
-    "@types/node": "~20.12"
+    "typescript": "5.6.2"
   }
 }
