--- a/infrastructure/prospect-api/package.json
+++ b/infrastructure/prospect-api/package.json
@@ -27,8 +27,9 @@
     "infrastructure-common": "workspace:*"
   },
   "devDependencies": {
+    "@types/node": "~20.12",
     "eslint-config-custom": "workspace:*",
     "tsconfig": "workspace:*",
-    "@types/node": "~20.12"
+    "typescript": "5.6.2"
   }
 }
