--- a/packages/infrastructure-common/package.json
+++ b/packages/infrastructure-common/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "eslint-config-custom": "workspace:*",
-    "tsconfig": "workspace:*"
+    "tsconfig": "workspace:*",
+    "typescript": "5.6.2"
   }
 }
