--- a/packages/content-common/package.json
+++ b/packages/content-common/package.json
@@ -31,7 +31,7 @@
     "eslint-config-custom": "workspace:*",
     "jest": "29.7.0",
     "msw": "2.4.7",
-    "node-fetch": "^2.6.7",
+    "node-fetch": "2.6.12",
     "ts-jest": "29.1.2",
     "tsup": "8.2.4",
     "tsconfig": "workspace:*"
