--- a/packages/eslint-config-custom/package.json
+++ b/packages/eslint-config-custom/package.json
@@ -10,7 +10,7 @@
     "@typescript-eslint/eslint-plugin": "7.3.1",
     "@typescript-eslint/parser": "7.3.1",
     "eslint-config-prettier": "8.10.0",
-    "eslint-plugin-prettier": "5.0.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "prettier": "3.0.0"
   }
 }
