--- a/servers/collection-api/package.json
+++ b/servers/collection-api/package.json
@@ -60,7 +60,7 @@
     "@types/graphql-upload": "8.0.12",
     "@types/jest": "29.5.12",
     "@types/node": "~20.12",
-    "@types/sinon": "^10.0.13",
+    "@types/sinon": "10.0.15",
     "@types/supertest": "^2.0.12",
     "chai": "4.3.7",
     "dotenv": "16.4.5",
@@ -69,7 +69,7 @@
     "jest": "29.7.0",
     "nock": "13.5.1",
     "nodemon": "3.0.1",
-    "sinon": "^15.0.1",
+    "sinon": "15.2.0",
     "supertest": "6.3.4",
     "ts-jest": "29.1.2",
     "tsconfig": "workspace:*",
