--- a/lambdas/prospect-translation-lambda/package.json
+++ b/lambdas/prospect-translation-lambda/package.json
@@ -29,6 +29,7 @@
     "msw": "2.4.7",
     "jest": "29.7.0",
     "ts-jest": "29.1.2",
+    "typescript": "5.6.2",
     "tsconfig": "workspace:*"
   },
   "files": [
