--- a/servers/collection-api/package.json
+++ b/servers/collection-api/package.json
@@ -32,14 +32,14 @@
     "@apollo/server-plugin-response-cache": "4.1.3",
     "@apollo/server": "4.11.0",
     "@apollo/subgraph": "2.9.0",
-    "@aws-sdk/client-eventbridge": "3.529.1",
     "@aws-sdk/client-s3": "3.529.1",
     "@aws-sdk/lib-storage": "3.529.1",
     "@pocket-tools/apollo-utils": "3.5.0",
-    "@pocket-tools/ts-logger": "^1.6.0",
+    "@pocket-tools/ts-logger": "1.9.4",
     "@prisma/client": "5.22.0",
     "@sentry/node": "7.112.2",
     "@sentry/tracing": "7.112.2",
+    "@pocket-tools/event-bridge": "1.7.1",  
     "content-common": "workspace:*",
     "cors": "2.8.5",
     "dataloader": "^2.2.2",
