--- a/servers/prospect-api/package.json
+++ b/servers/prospect-api/package.json
@@ -22,7 +22,7 @@
     "@aws-sdk/client-eventbridge": "3.529.1",
     "@aws-sdk/lib-dynamodb": "3.529.1",
     "@pocket-tools/apollo-utils": "3.5.0",
-    "@pocket-tools/ts-logger": "^1.6.0",
+    "@pocket-tools/ts-logger": "1.9.4",
     "content-common": "workspace:*",
     "@apollo/server": "4.11.0",
     "@apollo/subgraph": "2.9.0",
