--- a/servers/curated-corpus-api/package.json
+++ b/servers/curated-corpus-api/package.json
@@ -39,6 +39,9 @@
     "@aws-sdk/lib-storage": "3.529.1",
     "@devoxa/prisma-relay-cursor-connection": "3.1.0",
     "@pocket-tools/apollo-utils": "3.5.0",
+    "@pocket-tools/feature-flags-client": "1.0.0",
+    "@pocket-tools/sentry": "1.0.0",
+    "@pocket-tools/tracing": "1.8.9",
     "@pocket-tools/ts-logger": "^1.9.4",
     "@prisma/client": "5.22.0",
     "@sentry/node": "8.37.1",
