--- a/infrastructure/curated-corpus-api/package.json
+++ b/infrastructure/curated-corpus-api/package.json
@@ -23,7 +23,8 @@
     "@cdktf/provider-archive": "10.2.0",
     "cdktf": "0.20.8",
     "cdktf-cli": "0.20.8",
-    "constructs": "10.3.0"
+    "constructs": "10.3.0",
+    "infrastructure-common": "workspace:*"
   },
   "devDependencies": {
     "@types/node": "~20.12",
