feat: get skeleton section manager lambda in infra
- adds a bare bones lambda function
- update example.env

--- a/example.env
+++ b/example.env
@@ -9,3 +9,17 @@ AWS_XRAY_CONTEXT_MISSING=LOG_ERROR
 AWS_XRAY_LOG_LEVEL=silent
 SNOWPLOW_ENDPOINT=localhost:9090
 DATABASE_URL=mysql://root:@mysql:3306/curation_corpus?connect_timeout=300
+# LOG_LEVEL dictates how noisy express logs are in the console
+# from the winston docs (https://github.com/winstonjs/winston?tab=readme-ov-file#logging-levels):
+#   error: 0,
+#   warn: 1,
+#   info: 2,
+#   http: 3,
+#   verbose: 4,
+#   debug: 5,
+#   silly: 6
+LOG_LEVEL=0
+# to avoid unleash errors locally, you need the following set. ask in slack
+# for the values!
+UNLEASH_ENDPOINT=''
+UNLEASH_KEY=''
