--- a/servers/curated-corpus-api/package.json
+++ b/servers/curated-corpus-api/package.json
@@ -4,10 +4,9 @@
   "description": "",
   "main": "dist/main.js",
   "scripts": {
-    "build": "rm -rf dist && tsc && npm run build-schema-admin && npm run build-schema-public && npm run build-glean-debug",
+    "build": "rm -rf dist && tsc && npm run build-schema-admin && npm run build-schema-public && npm run build-glean",
     "build-schema-admin": "node dist/admin/buildSchema.js",
     "build-schema-public": "node dist/public/buildSchema.js",
-    "build-glean-debug": "glean translate src/events/glean/backend-metrics.yaml -f typescript -o ./src/events/glean/generated",
     "build-glean": "glean translate src/events/glean/backend-metrics.yaml -f typescript_server --option module_spec=es -o ./src/events/glean/generated",
     "watch": "tsc -w & nodemon",
     "start": "npm run migrate:prisma-deploy && node dist/main.js",
@@ -33,8 +32,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@apollo/server": "4.11.0",
     "@apollo/server-plugin-response-cache": "4.1.3",
+    "@apollo/server": "4.11.0",
     "@apollo/subgraph": "2.9.0",
     "@aws-sdk/client-eventbridge": "3.529.1",
     "@aws-sdk/client-s3": "3.529.1",
@@ -55,10 +54,10 @@
     "dataloader": "^2.2.2",
     "date-fns": "2.29.3",
     "express": "4.19.2",
-    "graphql": "16.9.0",
     "graphql-scalars": "1.22.4",
     "graphql-tag": "2.12.6",
     "graphql-upload": "15.0.2",
+    "graphql": "16.9.0",
     "luxon": "3.4.4",
     "metadata-scraper": "^0.2.61",
     "mime-types": "2.1.35",
