--- a/lambdas/corpus-scheduler-lambda/package.json
+++ b/lambdas/corpus-scheduler-lambda/package.json
@@ -18,26 +18,23 @@
   "dependencies": {
     "@sentry/serverless": "7.112.2",
     "content-common": "workspace:*",
-    "jsonwebtoken": "^9.0.2",
-    "jwk-to-pem": "^2.0.5",
+    "lambda-common": "workspace:*",
     "luxon": "3.4.4",
     "node-fetch": "^2.6.7",
-    "typia": "^6.0.3",
+    "typia": "^7.6.0",
     "tslib": "2.7.0",
     "@snowplow/node-tracker": "3.5.0"
   },
   "devDependencies": {
-    "@aws-sdk/client-secrets-manager": "3.529.1",
     "@types/aws-lambda": "8.10.134",
     "@types/luxon": "3.4.2",
     "@types/jest": "29.5.12",
     "@types/node-fetch": "^2.6.7",
-    "aws-sdk-client-mock": "^3.0.1",
     "eslint-config-custom": "workspace:*",
     "jest": "29.7.0",
     "msw": "2.4.7",
     "ts-jest": "29.1.2",
-    "ts-patch": "^3.1.2",
+    "ts-patch": "^3.3.0",
     "tsconfig": "workspace:*",
     "typescript": "5.6.2"
   },
