--- a/lambdas/section-manager-lambda/package.json
+++ b/lambdas/section-manager-lambda/package.json
@@ -10,21 +10,29 @@
     "dev": "npm run build && npm run watch",
     "test-integrations": "jest \"\\.integration\\.ts\" --runInBand",
     "lint": "eslint --fix-dry-run \"src/**/*.ts\"",
-    "format": "eslint --fix \"src/**/*.ts\""
+    "format": "eslint --fix \"src/**/*.ts\"",
+    "prepare": "ts-patch install && typia patch"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-secrets-manager": "3.529.1",
     "@sentry/serverless": "7.112.2",
-    "tslib": "2.7.0"
+    "content-common": "workspace:*",
+    "lambda-common": "workspace:*",
+    "node-fetch": "^2.6.7",
+    "tslib": "2.7.0",
+    "typia": "^7.6.0"
   },
   "devDependencies": {
-    "@aws-sdk/client-secrets-manager": "3.529.1",
     "@types/aws-lambda": "8.10.134",
     "@types/jest": "29.5.12",
+    "@types/node": "~20.12",
+    "@types/node-fetch": "^2.6.7",
     "eslint-config-custom": "workspace:*",
     "jest": "29.7.0",
     "ts-jest": "29.1.2",
+    "ts-patch": "^3.3.0",
     "tsconfig": "workspace:*",
     "typescript": "5.6.2"
   },
