--- a/lambdas/section-manager-lambda/tsconfig.json
+++ b/lambdas/section-manager-lambda/tsconfig.json
@@ -2,6 +2,11 @@
   "extends": "tsconfig/lambda.json",
   "compilerOptions": {
     "outDir": "dist",
+    "plugins": [
+      {
+        "transform": "typia/lib/transform"
+      }
+    ],
     "rootDir": "src",
     "strict": true,
     "strictNullChecks": true
