--- a/packages/lambda-common/package.json
+++ b/packages/lambda-common/package.json
@@ -23,8 +23,10 @@
   "dependencies": {
     "@aws-sdk/client-secrets-manager": "3.529.1",
     "@sentry/serverless": "7.112.2",
+    "content-common": "workspace:*",
     "jsonwebtoken": "^9.0.2",
     "jwk-to-pem": "^2.0.5",
+    "luxon": "3.4.4",
     "tslib": "2.7.0"
   },
   "devDependencies": {
