--- a/package.json
+++ b/package.json
@@ -33,5 +33,10 @@
     "syncpack": "^13.0.0",
     "tsconfig": "workspace:*",
     "turbo": "^2.1.1"
+  },
+  "resolutions": {
+    "body-parser": "1.20.3",
+    "path-to-regexp": "0.1.12",
+    "cross-spawn": "7.0.5"
   }
 }
