--- a/servers/prospect-api/package.json
+++ b/servers/prospect-api/package.json
@@ -18,6 +18,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@apollo/server": "4.12.1",
+    "@apollo/subgraph": "2.9.0",
     "@aws-sdk/client-dynamodb": "3.529.1",
     "@aws-sdk/client-eventbridge": "3.529.1",
     "@aws-sdk/lib-dynamodb": "3.529.1",
@@ -26,18 +28,16 @@
     "@pocket-tools/sentry": "1.0.0",
     "@pocket-tools/tracing": "1.8.9",
     "@pocket-tools/ts-logger": "^1.9.4",
-    "content-common": "workspace:*",
-    "@apollo/server": "4.11.0",
-    "@apollo/subgraph": "2.9.0",
-    "express": "4.19.2",
-    "cors": "2.8.5",
-    "graphql": "16.9.0",
-    "graphql-tag": "2.12.6",
     "@sentry/node": "8.37.1",
     "@snowplow/node-tracker": "3.5.0",
+    "content-common": "workspace:*",
+    "cors": "2.8.5",
+    "express": "5.1.0",
+    "graphql": "16.9.0",
+    "graphql-tag": "2.12.6",
+    "lodash": "4.17.21",
     "prospectapi-common": "workspace:*",
-    "tslib": "2.7.0",
-    "lodash": "4.17.21"
+    "tslib": "2.7.0"
   },
   "devDependencies": {
     "@faker-js/faker": "8.4.1",
@@ -46,10 +46,10 @@
     "eslint-config-custom": "workspace:*",
     "jest": "29.7.0",
     "nodemon": "3.0.1",
+    "supertest": "6.3.4",
     "ts-jest": "29.1.2",
     "tsconfig": "workspace:*",
-    "typescript": "5.6.2",
-    "supertest": "6.3.4"
+    "typescript": "5.6.2"
   },
   "files": [
     "dist",
