fix: update lambdas

--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "turbo": "^2.1.1"
   },
   "resolutions": {
-    "cross-spawn": "~7.0.5",
-    "constructs": "10.3.0"
+    "cross-spawn": "~7.0.5"
   }
 }
