--- a/servers/prospect-api/package.json
+++ b/servers/prospect-api/package.json
@@ -5,7 +5,7 @@
   "main": "dist/main.js",
   "scripts": {
     "build": "rm -rf dist && tsc",
-    "watch": "tsc -w & nodemon",
+    "watch": "tsc -w & nodemon --watch src --ext ts,js --ignore dist --ignore node_modules dist/main.js",
     "start": "node dist/main.js",
     "dev": "npm run build && npm run watch",
     "test-ci": "npm test",
