--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,6 +44,10 @@ services:
 
   snowplow:
     image: pocket/snowplow-micro:prod
+    environment:
+      - MICRO_IGLU_REGISTRY_URL=https://com-getpocket-dev.iglu.snplow.net/api
+      # Keep the same API key as prod for now
+      - MICRO_IGLU_API_KEY=8648ed81-2eb9-4b06-96be-e64d89c6405b
     healthcheck:
       test: ['CMD', 'bash', '-c', 'curl -sf localhost:9090/micro/all']
       interval: 5s
