--- a/infrastructure/braze-content-proxy/tsconfig.json
+++ b/infrastructure/braze-content-proxy/tsconfig.json
@@ -7,10 +7,7 @@
     "noEmit": true
   },
   "exclude": [
-    "node_modules/",
-    "dist/"
+    "node_modules/"
   ],
-  "include": [
-    "src/**/*.ts", 
-  ]
+  "include": ["src/**/*.ts", "src/config"]
 }
