Add Snowplow event tracking for Sections and Section Items
  - Implement SectionSnowplowHandler and SectionItemSnowplowHandler
  - Add integration tests for both handlers
  - Update object_update schema to version 1-0-21
  - Fix IAB field format to use JSON-stringified object
  - Improve test isolation with resetSnowplowEvents timing
  - Configure Snowplow to use prod registry and image

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,7 +43,10 @@ services:
       retries: 60
 
   snowplow:
-    image: pocket/snowplow-micro:dev
+    image: pocket/snowplow-micro:prod
+    environment:
+      - MICRO_IGLU_REGISTRY_URL=https://com-getpocket-prod.iglu.snplow.net/api
+      - MICRO_IGLU_API_KEY=8648ed81-2eb9-4b06-96be-e64d89c6405b
     healthcheck:
       test: ['CMD', 'bash', '-c', 'curl -sf localhost:9090/micro/all']
       interval: 5s
