--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,7 +46,7 @@ services:
     image: pocket/snowplow-micro:prod
     environment:
       - MICRO_IGLU_REGISTRY_URL=https://com-getpocket-prod.iglu.snplow.net/api
-      - MICRO_IGLU_API_KEY=${SNOWPLOW_IGLU_API_KEY}
+      - MICRO_IGLU_API_KEY=8648ed81-2eb9-4b06-96be-e64d89c6405b
     healthcheck:
       test: ['CMD', 'bash', '-c', 'curl -sf localhost:9090/micro/all']
       interval: 5s
