HNT-1224: Autofill now optional publisher

--- a/servers/curated-corpus-api/package.json
+++ b/servers/curated-corpus-api/package.json
@@ -59,6 +59,7 @@
     "metadata-scraper": "^0.2.61",
     "mime-types": "2.1.35",
     "prisma": "5.22.0",
+    "tldts": "5.7.87",
     "tslib": "2.7.0",
     "uuid": "9.0.1"
   },
