--- a/packages/content-common/package.json
+++ b/packages/content-common/package.json
@@ -33,7 +33,8 @@
     "msw": "2.4.7",
     "node-fetch": "^2.6.7",
     "ts-jest": "29.1.2",
+    "tsconfig": "workspace:*",
     "tsup": "8.2.4",
-    "tsconfig": "workspace:*"
+    "typescript": "5.6.2"
   }
 }
