--- a/packages/prospectapi-common/package.json
+++ b/packages/prospectapi-common/package.json
@@ -40,7 +40,8 @@
     "jest": "29.7.0",
     "msw": "2.4.7",
     "ts-jest": "29.1.2",
+    "tsconfig": "workspace:*",
     "tsup": "8.2.4",
-    "tsconfig": "workspace:*"
+    "typescript": "5.6.2"
   }
 }
